# AllSplice

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  Makefile.venv  PRD-1.0.md  README.md  TASKS-1.0.md  Xpyrightconfig.json  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  ruff.toml
.batch/: create_phase0.sh
.clinerules/: cline_mcp_settings.json  project-standards.md
.clinerules/workflows/: next-oai.md  next.md  nextphase.md
.devcontainer/: Dockerfile  devcontainer.json
.github/instructions/: project-rules.instructions.md
.github/workflows/: ci.yml
.plan/: phase1-log.md  phase2-plan.md
docs/: CURRENT-PLAN.md  TODO.md  phase10-tasks.md  phase11-tasks.md  phase3-tasks.md  phase4-tasks.md  phase5-tasks.md  phase6-tasks.md  phase7-tasks.md  phase9-tasks.md
docs/OAI-Standards/: OAI-CHANGE-LOG.md  Report.md  Streaming.md
docs/Ollama-Provider/: 01-Introduction-and-Integration-Overview.md  02-Goals-and-Objectives.md  03-Technical-Requirements-and-Configuration.md  04-API-Mapping-List-Models.md  05-API-Mapping-Embeddings.md  06-API-Mapping-Completions-legacy.md  07-API-Mapping-Chat-Completions.md  08-Testing-Strategy-and-QA.md  OLLAMA-TODO.md  PRD-Ollama-Provider.md
docs/OpenAI-EndPoint/: 01-Introduction-and-Architecture-Overview.md  02-Goals-and-Objectives.md  03-Scope.md  04-Provider-Interface-Definition.md  05-Routing-and-Namespace-Resolution.md  06-Authentication-and-Headers-Handling.md  07-Endpoint-GET-provider-v1-models.md  08-Endpoint-POST-provider-v1-embeddings.md  09-Endpoint-POST-provider-v1-completions-legacy.md  10-Endpoint-POST-provider-v1-chat-completions.md  11-Standards-Tooling-and-QA-STATUS.md  11-Standards-Tooling-and-QA.md  12-Documentation-and-Readiness.md  CURRENT-TASK.md  OAI-Final-Summary.md  OAI-LOG.md  PRD-OAI-ENDPOINT.md  TODO.md  config-plan-0.md  config-plan-1.md
docs/PRD-Initial-v1.0/: PRD-TASKS-1.0.md  phase0-steps.md  phase2-steps.md  phase8-tasks.md
docs/archived/: Archived-List.md  phase10-tasks.md
scripts/: run_dev.sh
src/ai_gateway/: __init__.py
src/ai_gateway/api/: app.py  routes.py
src/ai_gateway/config/: config.py  constants.py
src/ai_gateway/exceptions/: errors.py  handlers.py
src/ai_gateway/logging/: setup.py
src/ai_gateway/middleware/: auth.py  correlation.py  logging_middleware.py  security_headers.py
src/ai_gateway/providers/: base.py  cerebras.py  cerebras_client.py  custom.py  ollama.py  ollama_client.py
src/ai_gateway/schemas/: __init__.py  openai_chat.py  openai_embeddings.py  openai_models.py
src/allsplice.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/api/: test_app.py  test_provider_di.py  test_routes.py  test_routes_streaming.py
tests/config/: test_config.py
tests/exceptions/: test_handlers.py
tests/logging/: test_structured_logging.py
tests/middleware/: test_auth.py  test_correlation_id.py  test_correlation_streaming_and_headers.py  test_cors.py  test_security_headers.py
tests/providers/: test_cerebras.py  test_cerebras_client.py  test_custom.py  test_ollama.py  test_ollama_client.py  test_ollama_client_http.py  test_ollama_client_nonstream_and_edges.py  test_ollama_client_stream.py  test_ollama_router_passthrough.py  test_ollama_stream_mapping.py
tests/schemas/: test_openai_chat.py  test_openai_embeddings.py  test_openai_models.py
